--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,133 @@
-pandas
-prefect
-prefect-aws
-prefect-dbt
-s3fs
-SQLAlchemy
-psycopg2-binary
-prefect-sqlalchemy
-redshift_connector
-boto3
-fastparquet
-dbt-core
-dbt-redshift 
+agate==1.6.3
+aiobotocore==2.4.2
+aiohttp==3.8.4
+aioitertools==0.11.0
+aiosignal==1.3.1
+aiosqlite==0.18.0
+alembic==1.10.3
+anyio==3.6.2
+apprise==1.3.0
+asgi-lifespan==2.1.0
+asn1crypto==1.5.1
+async-timeout==4.0.2
+asyncpg==0.27.0
+attrs==22.2.0
+Babel==2.12.1
+beautifulsoup4==4.12.2
+boto3==1.24.59
+botocore==1.27.59
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==2.2.1
+colorama==0.4.5
+coolname==2.2.0
+cramjam==2.6.2
+croniter==1.3.10
+cryptography==40.0.1
+dateparser==1.1.8
+dbt-core==1.3.3
+dbt-extractor==0.4.1
+dbt-postgres==1.3.3
+dbt-redshift==1.3.0
+docker==6.0.1
+fastapi==0.95.0
+fastparquet==2023.2.0
+frozenlist==1.3.3
+fsspec==2023.1.0
+future==0.18.3
+google-auth==2.17.2
+graphql-core==3.2.3
+greenlet==2.0.2
+griffe==0.26.0
+h11==0.14.0
+h2==4.1.0
+hologram==0.0.15
+hpack==4.0.0
+httpcore==0.16.3
+httpx==0.23.3
+hyperframe==6.0.1
+idna==3.4
+isodate==0.6.1
+Jinja2==3.1.2
+jmespath==1.0.1
+jsonpatch==1.32
+jsonpointer==2.3
+jsonschema==3.2.0
+kubernetes==26.1.0
+leather==0.3.4
+Logbook==1.5.3
+lxml==4.9.2
+Mako==1.2.4
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+mashumaro==3.0.4
+mdurl==0.1.2
+minimal-snowplow-tracker==0.0.2
+msgpack==1.0.5
+multidict==6.0.4
+mypy-boto3-s3==1.26.104
+mypy-boto3-secretsmanager==1.26.89
+networkx==2.8.8
+numpy==1.24.2
+oauthlib==3.2.2
+orjson==3.8.9
+packaging==21.3
+pandas==2.0.0
+parsedatetime==2.4
+pathspec==0.9.0
+pendulum==2.1.2
+prefect==2.10.2
+prefect-aws==0.3.0
+prefect-dbt==0.3.1
+prefect-shell==0.1.5
+prefect-sqlalchemy==0.2.4
+psycopg2-binary==2.9.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==1.10.7
+Pygments==2.14.0
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-slugify==8.0.1
+pytimeparse==1.1.8
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pytzdata==2020.1
+PyYAML==6.0
+readchar==4.0.5
+redshift-connector==2.0.910
+regex==2023.3.23
+requests==2.28.2
+requests-oauthlib==1.3.1
+rfc3986==1.5.0
+rich==13.3.3
+rsa==4.9
+s3fs==2023.1.0
+s3transfer==0.6.0
+scramp==1.4.4
+sgqlc==16.1
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.4
+SQLAlchemy==1.4.47
+sqlparse==0.4.3
+starlette==0.26.1
+text-unidecode==1.3
+toml==0.10.2
+typer==0.7.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.15
+uvicorn==0.21.1
+websocket-client==1.5.1
+websockets==11.0.1
+Werkzeug==2.2.3
+wrapt==1.15.0
+yarl==1.8.2
