--- a/.github/workflows/terraform_part.yml
+++ b/.github/workflows/terraform_part.yml
@@ -54,6 +54,7 @@ jobs:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
       with:
+        terraform_version: 1.3.7
         terraform_wrapper: false
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         
@@ -105,11 +106,4 @@ jobs:
        terraform apply -var redshift_password='${{ secrets.REDSHIFT_PASSWORD }}' \
                            -var my_ip_address='${{ secrets.MY_IP_ADDRESS }}' \
                            --auto-approve \
-                           -json >> output.json
-       
-
-
-
-
-       
-       
+                           -json >> output.json   
