--- a/.github/workflows/terraform-deploy-module.yml
+++ b/.github/workflows/terraform-deploy-module.yml
@@ -102,6 +102,4 @@ jobs:
       run: |
        cd infra/${{ github.event.inputs.module }}
        touch output.json
-       terraform apply -var-file=secrets.tfvars \
-                           --auto-approve \
-                           -json >> output.json   
+       terraform apply -var-file=secrets.tfvars --auto-approve
