--- a/.github/workflows/terraform-deploy-module.yml
+++ b/.github/workflows/terraform-deploy-module.yml
@@ -1,4 +1,4 @@
-name: 'Deploy-TF-Module'
+name: 'Terraform-Deploy'
 
 on:
  workflow_dispatch:
@@ -25,11 +25,6 @@ on:
         required: true
         default: 'zharec/prefect_agent:latest'
         type: string
-      module:
-        description: Name of the image
-        required: true
-        default: 'ec2'
-        type: string
         
 permissions:
   contents: read
@@ -44,6 +39,7 @@ jobs:
     defaults:
       run:
         shell: bash
+        working-directory: infra
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -52,9 +48,8 @@ jobs:
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
+      uses: hashicorp/setup-terraform@v1
       with:
-        terraform_version: 1.3.7
         terraform_wrapper: false
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
         
@@ -75,31 +70,29 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: |
-       cd infra/${{ github.event.inputs.module }}
+       cd Terraform
        touch capstone_kp.pub
        echo '${{ secrets.CAPSTONE_PUBLIC_KEY }}' >> capstone_kp.pub
-       terraform init
        touch secrets.tfvars
-       echo 'redshift_password="${{ secrets.REDSHIFT_PASSWORD }}"' >> secrets.tfvars
-       echo 'my_ip_address="${{ secrets.MY_IP_ADDRESS }}"' >> secrets.tfvars
+       echo '${{ secrets.ENV_FILE }}' >> secrets.tfvars
+       terraform init
       
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Validate
       id: validate
-      run: |
-       cd infra/${{ github.event.inputs.module }}
-       terraform validate -no-color
+      run: terraform validate
        
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: |
-       cd infra/${{ github.event.inputs.module }}
-       terraform plan -var-file=secrets.tfvars
+      run: terraform plan -var-file=secrets.tfvars
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      run: |
-       cd infra/${{ github.event.inputs.module }}
-       touch output.json
-       terraform apply -var-file=secrets.tfvars --auto-approve
+      run: terraform apply -var-file=secrets.tfvars --auto-approve
+       
+
+
+
+       
+       
