--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -83,12 +83,14 @@ jobs:
        
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -var-file=secrets.tfvars
+      run: |
+        terraform plan -var-file=secrets.tfvars     
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      run: terraform apply -var-file=secrets.tfvars --auto-approve
+      run: | 
+        terraform apply terraform apply -var-file=secrets.tfvars --auto-approve
        
 
 
