--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -39,7 +39,6 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: infra
 
     steps:
     # Checkout the repository to the GitHub Actions runner
@@ -70,6 +69,7 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: |
+       cd infra
        touch capstone_kp.pub
        echo '${{ secrets.CAPSTONE_PUBLIC_KEY }}' >> capstone_kp.pub
        touch secrets.tfvars
@@ -79,18 +79,22 @@ jobs:
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Validate
       id: validate
-      run: terraform validate
+      run: |
+       cd infra
+       terraform validate
        
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: |
-        terraform plan -var-file=secrets.tfvars     
+       cd infra
+       terraform plan -var-file=secrets.tfvars     
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       run: | 
-        terraform apply terraform apply -var-file=secrets.tfvars --auto-approve
+       cd infra
+       terraform apply terraform apply -var-file=secrets.tfvars --auto-approve
        
 
 
