--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ asn1crypto==1.5.1
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==22.2.0
+azure-core==1.26.4
+azure-identity==1.12.0
 Babel==2.12.1
 beautifulsoup4==4.12.2
 boto3==1.24.59
