--- a/flows/dbt/models/staging/src_aws_data.yml
+++ b/flows/dbt/models/staging/src_aws_data.yml
@@ -7,6 +7,6 @@ sources:
     tables:
       - name: raw_aws_spec_info
       - name: raw_aws_spot_prices
-      - name: raw_aws_on_demand_prices
+      - name: raw_on_demand_prices
       - name: raw_azure_spec_info
       - name: raw_azure_spot_prices
